# RNA-editing-pred

./: README.md
biLSTM/: README.md  TFM_LSTMBidiAttention_2CH_DataSelector_bla_d1.ipynb  setup.cfg  tfm_lstmbidiattention_2ch_dataselector_bla_d1.py
biLSTM/notebooks/: CrossTest_Template.ipynb  CrossTest_Template_HsLast_HsPre.ipynb  CrossTest_Template_HsPre_HsLast.ipynb  CrossTest_Template_HsPre_Mm.ipynb  CrossTest_Template_Hs_Mm.ipynb  CrossTest_Template_Mm_Hs.ipynb  CrossTest_Template_Mm_HsPre.ipynb  CrossTest_Template_Mm_Tt.ipynb  CrossTest_Template_Tt_Hs.ipynb  CrossTest_Template_Tt_Mm.ipynb  ImbalancedData_LSTMBidiAttention.ipynb  ImbalancedData_LSTMBidiAttention_GoogleColab.ipynb  ImbalancedData_LSTMBidiAttention_GoogleColab_BiasPesos.ipynb  LSTMBidiAttention_2CH_HsPRE_1000G.ipynb  Prediction_100Genes.ipynb  Prediction_20Genes.ipynb  Prediction_30Genes.ipynb  README.md  RNNBidiAttention9_Predictor_hg38_to_Tt.ipynb  RNNBidiAttention9_Predictor_hg38_to_mm.ipynb  RNNBidiAttention9_Predictor_hg38_to_mm_Colab.ipynb  RNNBidiAttention9_Predictor_hg38_to_obi.ipynb  RNNBidiAttention9_Predictor_mm_to_hg38.ipynb  TFM_CNN_2CH_Hs.ipynb  TFM_CNN_2CH_Mm.ipynb  TFM_CNN_2CH_Mm_ActivMap.ipynb  TFM_CNN_2CH_Tt.ipynb  TFM_CNN_2CH_Tt_GoogleColab.ipynb  TFM_CNN_HYBRID_HsMm.ipynb  TFM_CNN_HYBRID_HsMm2.ipynb  TFM_LSTMBidiAttention.ipynb  TFM_LSTMBidiAttentionW100.ipynb  TFM_LSTMBidiAttention_1CH_ADN.ipynb  TFM_LSTMBidiAttention_1CH_ADN_TT.ipynb  TFM_LSTMBidiAttention_1CH_STR.ipynb  TFM_LSTMBidiAttention_1CH_STR_TT.ipynb  TFM_LSTMBidiAttention_2CH_MM.ipynb  TFM_LSTMBidiAttention_2CH_TT.ipynb  (+10 more)
(+48 files in other folders)
