[metadata]
name = rnaed
author = Jesús Peñuela
version = 1.0.2
description = RNA Editing tools
long_description = RNA Editing tools to split genes into sequence windows and coding
url = https://localhost
keywords = rna, editing

[options]
python_requires  = >=3.7, <4
install_requires =
    pandas
    numpy
    tensorflow